src/day_5/snapshots/advent_of_code_2024__day_5__tests__parse_example-2.snap
---
source: src/day_5/mod.rs
expression: result.1
snapshot_kind: text
---
- - 75
  - 47
  - 61
  - 53
  - 29
- - 97
  - 61
  - 53
  - 29
  - 13
- - 75
  - 29
  - 13
- - 75
  - 97
  - 47
  - 61
  - 53
- - 61
  - 13
  - 29
- - 97
  - 13
  - 75
  - 29
  - 47
