src/day_5/snapshots/advent_of_code_2024__day_5__tests__parse_example.snap
---
source: src/day_5/mod.rs
expression: result.0
snapshot_kind: text
---
29:
  - 13
47:
  - 53
  - 13
  - 61
  - 29
53:
  - 29
  - 13
61:
  - 13
  - 53
  - 29
75:
  - 29
  - 53
  - 47
  - 61
  - 13
97:
  - 13
  - 61
  - 47
  - 29
  - 53
  - 75
